fix view reglas

--- a/src/main/webapp/script/reglaTrigger/List.xhtml
+++ b/src/main/webapp/script/reglaTrigger/List.xhtml
@@ -56,7 +56,7 @@
                              rowKey="#{item.idTrigger}">
 
                     <f:facet name="header">
-                        <h:outputText value="Listado de Reglas" style="float: left;"></h:outputText>
+                        <h:outputText value="&nbsp;" style="float: left;"></h:outputText>
                         <div align="right" >
                             <p:outputPanel style="margin-top: -2px">  
                                 <p:inputText id="globalFilter" value="#{reglaTriggerController.searchPattern}"
